--- a/blankon-wallpapers.xml.in
+++ b/blankon-wallpapers.xml.in
@@ -2,7 +2,7 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper>
-    <_name>Rote</_name>
+    <_name>BlankOn Rote Wallpapers</_name>
     <filename>/usr/share/backgrounds/contex/rote.xml</filename>
     <options>zoom</options>
     <pcolor>#0DB0FF</pcolor>
