--- a/rote-wallpapers.xml.in
+++ b/rote-wallpapers.xml.in
@@ -49,4 +49,12 @@
     <scolor>#000000</scolor>
     <shade_type>solid</shade_type>
   </wallpaper>
+  <wallpaper>
+    <_name>Noon</_name>
+    <filename>/usr/share/backgrounds/17-agustus.png</filename>
+    <options>zoom</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
 </wallpapers>
