--- a/rote-wallpapers.xml.in
+++ b/rote-wallpapers.xml.in
@@ -50,7 +50,7 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>Noon</_name>
+    <_name>17 Agustus</_name>
     <filename>/usr/share/backgrounds/17-agustus.png</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
