--- a/blankon-wallpapers.xml.in
+++ b/blankon-wallpapers.xml.in
@@ -2,8 +2,8 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper>
-    <_name>BlankOn Rote Wallpapers</_name>
-    <filename>/usr/share/backgrounds/contex/rote.xml</filename>
+    <_name>BlankOn Suroboyo Wallpapers</_name>
+    <filename>/usr/share/backgrounds/contex/suroboyo.xml</filename>
     <options>zoom</options>
     <pcolor>#0DB0FF</pcolor>
     <scolor>#0DB0FF</scolor>
