--- a/blankon-wallpapers.xml.in
+++ b/blankon-wallpapers.xml.in
@@ -5,8 +5,8 @@
     <_name>BlankOn Suroboyo Wallpapers</_name>
     <filename>/usr/share/backgrounds/contex/suroboyo.xml</filename>
     <options>zoom</options>
-    <pcolor>#0DB0FF</pcolor>
-    <scolor>#0DB0FF</scolor>
+    <pcolor>#1E558A</pcolor>
+    <scolor>#1E558A</scolor>
     <shade_type>solid</shade_type>
   </wallpaper>
 </wallpapers>
