remove suroboyo folder

--- a/suroboyo-wallpapers.xml.in
+++ b/suroboyo-wallpapers.xml.in
@@ -50,7 +50,7 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>17 Agustus</_name>
+    <_name>Tugu pahlawan</_name>
     <filename>/usr/share/backgrounds/Tugu_pahlawan.png</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
