--- a/suroboyo-wallpapers.xml.in
+++ b/suroboyo-wallpapers.xml.in
@@ -57,4 +57,28 @@
     <scolor>#000000</scolor>
     <shade_type>solid</shade_type>
   </wallpaper>
+  <wallpaper>
+    <_name>Tugu pahlawan</_name>
+    <filename>/usr/share/backgrounds/Suramadu.png</filename>
+    <options>stretch</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
+  <wallpaper>
+    <_name>Tugu pahlawan</_name>
+    <filename>/usr/share/backgrounds/Green.png</filename>
+    <options>stretch</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
+  <wallpaper>
+    <_name>Tugu pahlawan</_name>
+    <filename>/usr/share/backgrounds/Grey.png</filename>
+    <options>stretch</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
 </wallpapers>
