First upload to tambora

--- a/blankon-wallpapers.xml.in
+++ b/blankon-wallpapers.xml.in
@@ -2,8 +2,8 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper>
-    <_name>BlankOn Suroboyo Wallpapers</_name>
-    <filename>/usr/share/backgrounds/contex/suroboyo.xml</filename>
+    <_name>BlankOn Tambora Wallpapers</_name>
+    <filename>/usr/share/backgrounds/contex/tambora.xml</filename>
     <options>zoom</options>
     <pcolor>#1E558A</pcolor>
     <scolor>#1E558A</scolor>
