--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -66,7 +66,7 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>Green</_name>
+    <_name>Bunga 1</_name>
     <filename>/usr/share/backgrounds/bunga_1.jpg</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
@@ -74,8 +74,24 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>Grey</_name>
+    <_name>Bunga 2</_name>
     <filename>/usr/share/backgrounds/bunga_2.jpg</filename>
+    <options>zoom</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
+  <wallpaper>
+    <_name>Pantai Lasiana 1</_name>
+    <filename>/usr/share/backgrounds/Lasiana_1.jpg</filename>
+    <options>zoom</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
+  <wallpaper>
+    <_name>Pantai Lasiana 2</_name>
+    <filename>/usr/share/backgrounds/Lasiana_2.jpg</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
     <scolor>#000000</scolor>
