--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -50,8 +50,8 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>OIX</_name>
-    <filename>/usr/share/backgrounds/OIX.png</filename>
+    <_name>Sunrise</_name>
+    <filename>/usr/share/backgrounds/Sunrise.png</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
     <scolor>#000000</scolor>
