--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -114,8 +114,8 @@
     <shade_type>solid</shade_type>
   </wallpaper>
   <wallpaper>
-    <_name>Bunga 1</_name>
-    <filename>/usr/share/backgrounds/Bunga_1.jpg</filename>
+    <_name>Gulali</_name>
+    <filename>/usr/share/backgrounds/Gulali.png</filename>
     <options>zoom</options>
     <pcolor>#000000</pcolor>
     <scolor>#000000</scolor>
