--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -145,4 +145,12 @@
     <scolor>#000000</scolor>
     <shade_type>solid</shade_type>
   </wallpaper>
+  <wallpaper>
+    <_name>Cendawan</_name>
+    <filename>/usr/share/backgrounds/Cendawan.jpg</filename>
+    <options>zoom</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
 </wallpapers>
