--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -81,6 +81,14 @@
  		<scolor>#000000</scolor>
  		<shade_type>solid</shade_type>
 	</wallpaper>
+  <wallpaper>
+    <_name>Mosaic 1 Red</_name>
+    <filename>/usr/share/backgrounds/Mosaic_1_Red.png</filename>
+    <options>zoom</options>
+    <pcolor>#000000</pcolor>
+    <scolor>#000000</scolor>
+    <shade_type>solid</shade_type>
+  </wallpaper>
 	<wallpaper>
 		<_name>Noon</_name>
 		<filename>/usr/share/backgrounds/Noon.png</filename>
