--- a/tambora-wallpapers.xml.in
+++ b/tambora-wallpapers.xml.in
@@ -257,4 +257,13 @@
  		<scolor>#000000</scolor>
  		<shade_type>solid</shade_type>
 	</wallpaper>
+	 <wallpaper>
+                <_name>Sukabumi</_name>
+                <filename>/usr/share/backgrounds/sukabumi.jpg</filename>
+                <options>zoom</options>
+                <pcolor>#000000</pcolor>
+                <scolor>#000000</scolor>
+                <shade_type>solid</shade_type>
+        </wallpaper>
+
 </wallpapers>
