Change tambora to uluwatu in blankon-wallpapers.xml.in

--- a/blankon-wallpapers.xml.in
+++ b/blankon-wallpapers.xml.in
@@ -2,7 +2,7 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper>
-    <_name>BlankOn Tambora Wallpapers</_name>
+    <_name>BlankOn Uluwatu Wallpapers</_name>
     <filename>/usr/share/backgrounds/contex/uluwatu.xml</filename>
     <options>zoom</options>
     <pcolor>#1E558A</pcolor>
